feat: enhance email configuration and update dependencies

--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,18 @@ export MINIO_ROOT_PASSWORD=minioadmin
 # Visit https://resend.com to generate or manage your API key.
 export RESEND_API_KEY=your_resend_api_key_here
 
+# Setting SMTP
+# export EMAIL_ADAPTER=smtp
+# export SMTP_HOST=
+# export SMTP_PORT= 
+# export SMTP_USERNAME=
+# export SMTP_PASSWORD=
+
+# export SMTP_NO_MX_LOOKUPS=
+# export SMTP_RETRIES=
+# export SMTP_SSL=true 
+# export SMTP_TLS=
+
 
 # Optional - Admin Credentials
 export WRAFT_ADMIN_EMAIL=wraft_admin_email
