chore: update SMTP configuration in .env.example and runtime.exs for improved flexibility

--- a/.env.example
+++ b/.env.example
@@ -53,15 +53,12 @@ export RESEND_API_KEY=your_resend_api_key_here
 
 # Setting SMTP
 # export EMAIL_ADAPTER=smtp
-# export SMTP_HOST=
+# export SMTP_HOST=smtp.gmail.com
 # export SMTP_PORT= 
 # export SMTP_USERNAME=
 # export SMTP_PASSWORD=
+# export SMTP_SSL=false
 
-# export SMTP_NO_MX_LOOKUPS=
-# export SMTP_RETRIES=
-# export SMTP_SSL=true 
-# export SMTP_TLS=
 
 
 # Optional - Admin Credentials
