--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,15 @@ export MINIO_ROOT_PASSWORD=minioadmin
 # Visit https://resend.com to generate or manage your API key.
 export RESEND_API_KEY=your_resend_api_key_here
 
+# Setting SMTP
+# export EMAIL_ADAPTER=smtp
+# export SMTP_HOST=smtp.gmail.com
+# export SMTP_PORT= 
+# export SMTP_USERNAME=
+# export SMTP_PASSWORD=
+# export SMTP_SSL=false
+
+
 
 # Optional - Admin Credentials
 export WRAFT_ADMIN_EMAIL=wraft_admin_email
