--- a/.dockerignore
+++ b/.dockerignore
@@ -43,3 +43,8 @@ erl_crash.dump
 /assets/node_modules/
 /priv/static/assets/
 /priv/static/cache_manifest.json
+
+# Rust build artifacts
+/native/*/target/
+/priv/native/*.so
+/priv/native/*.dylib
