--- a/native/pdf_analyzer/Cargo.toml
+++ b/native/pdf_analyzer/Cargo.toml
@@ -10,9 +10,9 @@ path = "src/lib.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
-rustler = "0.32.0"
-lopdf = "0.31.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-chrono = "0.4"
-flate2 = "1.0"
+rustler = "^0.37.2"
+lopdf = "^0.38.0"
+serde = { version = "^1.0", features = ["derive"] }
+serde_json = "^1.0"
+chrono = "^0.4"
+flate2 = "^1.0"
